# ai-coding-workshop

./: .gitignore  .nojekyll  AGENTS.md  README.md  _quarto.yml  custom.scss  index.html  index.qmd  justfile  package-lock.json  package.json  robots.txt  search.json  setup.html  setup.qmd  sitemap.xml
diagrams/: agent.mmd  question_code_answer.mmd
lessons/: 01_intro.html  01_intro.qmd  02_agent.html  02_agent.qmd  03_planning.html  03_planning.qmd  04_agents_md.html  04_agents_md.qmd  05_projectstructure.html  05_projectstructure.qmd  06_testing.html  06_testing.qmd  07_skills_subagents.html  07_skills_subagents.qmd  day-1.html  day-1.qmd  day-2.html  day-2.qmd  day-3.html  day-3.qmd
projects/: index.html  index.qmd
projects/archival-collections/: _AGENTS.md  index.html  index.qmd  outline.html  outline.qmd
projects/bikability/: README.md  bikability.html  bikability.qmd  index.html  index.qmd
projects/covid-fatality-rates/: prompt.html  prompt.md  session.html  session.md
projects/fish/: index.html  index.qmd
projects/geo-viz/: index.html  index.qmd  readme.html  readme.md.Rmd  readme.qmd
projects/regulations-comments/: README.md
projects/text-cleaning/: .gitignore  AGENTS.md  README.md  normalize.py  pyproject.toml  review_server.py
projects/text-cleaning/data/raw/: comments.csv.enc
projects/text-cleaning/data/test/: examples.csv
projects/text-cleaning/review_templates/: index.html
projects/text-cleaning/tests/: test_normalize.py
scripts/: a11y.mjs  fix-callout-a11y.mjs
topics/: browser-mcp.html  browser-mcp.md
(+4 files in other folders)
