[project]
name = "text-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contractions>=0.1.73",
    "emoji>=2.15.0",
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
